@@ -1,4 +1,6 @@
 5.0.8
+- Bugfix: The serialized string analysis was not thorough enough
+  to detect all possible candidates.
 
 5.0.7
 - Bugfix: The XML analysis does not recognise a broken XML string.
